# laubmann-kg

./: .cursorrules  .env.example  .gitignore  CHANGELOG.md  PROJECT_TREE.md  README.md  pyproject.toml
configs/: dwca.yaml  models.yaml  ontology.yaml  pipeline.yaml  prompts.yaml
docs/: annotation_guidelines.md  competency_questions.md  data_model.md  evaluation_plan.md  methodology.md  ontology_mapping.md  prompt_catalogue.md
notebooks/: 01_explore_pages.ipynb  02_evaluate_layout.ipynb  03_evaluate_transcription.ipynb  04_evaluate_observation_extraction.ipynb
ontologies/: controlled_vocabularies.ttl  laubmann.ttl  shacl_shapes.ttl
prompts/: citation_classification.md  diary_entry_detection.md  dwca_mapping.md  entity_extraction.md  jsonld_generation.md  layout_detection.md  observation_extraction.md  region_transcription.md  taxon_normalization.md  validation_repair.md
schemas/: diary_entry.schema.json  dwca_occurrence.schema.json  observation.schema.json  page_layout.schema.json  transcription.schema.json
scripts/: evaluate_pipeline.py  run_dwca_export.py  run_extraction.py  run_kg_export.py  run_layout_detection.py  run_preprocessing.py  run_transcription.py
src/laubmann_kg/: __init__.py  cli.py  logging_config.py
src/laubmann_kg/diary/: __init__.py  detect_entries.py  link_entries_across_pages.py  normalize_dates.py  normalize_places.py
src/laubmann_kg/dwca/: __init__.py  archive.py  (+6 more)
tests/: test_date_normalization.py  test_dwca_export.py  test_jsonld_generation.py  test_observation_schema.py  test_region_schema.py
tests/fixtures/: lkg_full.ttl
(+71 files in other folders)
