[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "laubmann-kg"
version = "0.1.0"
description = "Laubmann knowledge graph processing pipeline"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
laubmann-kg = "laubmann_kg.cli:app"

[tool.hatch.build]
sources = ["src"]
